# leapr

./: .gitmodules  CMakeLists.txt  README.md  leapr.cpp  test.py
.github/workflows/: ContinuousIntegration.yml
cmake/: develop_dependencies.cmake  release_dependencies.cmake  unit_testing.cmake
coher/: coher.h  coher.test.cpp
coher/coher_util/: bccLatticeFactors.h  bccLatticeFactors.test.cpp  end.h  end.test.cpp  fccLatticeFactors.h  fccLatticeFactors.test.cpp  formf.h  formf.test.cpp  hexLatticeFactors.h  hexLatticeFactors.test.cpp  hexLatticeFactorsHelper.h  hexLatticeFactorsHelper.test.cpp  hexLatticeFactorsInner.h  (+11 more)
coldh/: coldh.h  coldh.test.cpp
contin/: contin.h  contin.test.cpp
discre/: discre.h  discre.test.cpp
docs/: additional.rst  codingDetails.rst  conf.py  demo.rst  examples.rst  index.rst  misc.rst  overview.rst  quickStart.rst  theory.rst  usersGuide.rst
leapr/: CMakeLists.txt
leapr/dependencies/catch-adapter/: .gitignore  CMakeLists.txt  README.md
leapr/dependencies/catch-adapter/metaconfigure/: cmake.py
metaconfigure/: description.json
skold/: skold.h  skold.test.cpp
src/: leapr.cpp  leapr.hpp  testFuncs.h
src/coher/coher_util/test/: CMakeLists.txt  bccLatticeFactors.test.cpp  end.test.cpp  fccLatticeFactors.test.cpp  formf.test.cpp  hexLatticeFactors.test.cpp
src/coldHydrogen/coldHydrogen_util/betaLoop_util/jprimeLoop_util/test/: CMakeLists.txt  sumh.test.cpp
src/coldHydrogen/test/: CMakeLists.txt  coldHydrogen.test.cpp
src/contin/contin_util/start_util/test/: CMakeLists.txt  fsum.test.cpp  getDebyeWaller.test.cpp  getEffectiveTemp.test.cpp  normalize.test.cpp  start_util.test.cpp
src/contin/contin_util/test/: CMakeLists.txt  checkMoments.test.cpp  checkMomentsEigen.test.cpp  convol.test.cpp  interpolate.test.cpp  start.test.cpp
src/contin/test/: CMakeLists.txt  contin.test.cpp
src/continuous/continuous_util/test/: CMakeLists.txt  checkMoments.test.cpp  convolution.test.cpp  start.test.cpp
src/simple/continuous/continuousTools/test/: CMakeLists.txt  convolution.test.cpp  sumOverTn.test.cpp
src/simple/continuous/test/: CMakeLists.txt  continuous.test.cpp  convolution.test.cpp  integrate.test.cpp  interpolate.test.cpp  sumOverTn.test.cpp
src/simple/discreteOsc/discreteOscTools/oscillatorLoopTools/test/: CMakeLists.txt  bfact.test.cpp
src/simple/generalTools/test/: CMakeLists.txt  integrate.test.cpp  interpolate.test.cpp
src/skold/skold_util/test/: CMakeLists.txt
src/test/: CMakeLists.txt  input-tsl-BeO.h  input-tsl-D2O.h  input-tsl-SiO2-alpha.h  input-tsl-orthoH.h  input-tsl-paraD.h  leapr.test.cpp  tsl-SiO2-alpha.h  tsl_be_tape24.h  tsl_h2o_tape24.h  tsl_liq_ch4_tape24.h  tsl_ortho_h_tape24.h  tsl_sic_tape24.h
src/test/resources/: tsl_BeO_tape24  tsl_D2O_tape24  tsl_orthoH_tape24  tsl_paraD_tape24
src/trans/trans_util/test/: CMakeLists.txt  bessel_K1.test.cpp  s_table_generation.test.cpp  sbfill.test.cpp  terps.test.cpp
src/translational/translational_util/test/: CMakeLists.txt  bessel_K1.test.cpp  s_table_generation.test.cpp  sbfill.test.cpp
subprojects/: catch-adapter  eigen-adapter
thermr/: CMakeLists.txt
thermr/dependencies/eigen-adapter/: CMakeLists.txt  README.md
thermr/dependencies/eigen-adapter/src/.hg/cache/: branch2-served
thermr/dependencies/eigen-adapter/src/.hg/store/: fncache  undo
thermr/dependencies/eigen-adapter/src/.hg/store/data/_eigen/: _cholesky.i  _core.i  _eigenvalues.i  _q_r.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/_eigen/src/_core/: _general_product.h.i  _map.h.i  _matrix_base.h.i  _plain_object_base.h.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/_eigen/src/_core/arch/_c_u_d_a/: _half.h.i  _packet_math_half.h.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/_eigen/src/_core/products/: _general_matrix_matrix___b_l_a_s.h.i  _general_matrix_vector___b_l_a_s.h.i  _selfadjoint_matrix_matrix___b_l_a_s.h.i  _selfadjoint_matrix_vector___b_l_a_s.h.i  _triangular_matrix_matrix.h.i  _triangular_matrix_vector___b_l_a_s.h.i  _triangular_solver_matrix___b_l_a_s.h.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/_eigen/src/_core/util/: _macros.h.d  _memory.h.i  _meta.h.i  _xpr_helper.h.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/_eigen/src/_sparse_core/: _conservative_sparse_sparse_product.h.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/_eigen/src/_sparse_q_r/: _sparse_q_r.h.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/doc/: _quick_reference.dox.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/doc/snippets/: _matrix___map__stride.cpp.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/test/: cuda__basic.cu.i  geo__quaternion.cpp.i  half__float.cpp.i  indexed__view.cpp.i  mapstride.cpp.i  redux.cpp.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/unsupported/_eigen/_c_x_x11/src/_tensor/: _tensor_contraction.h.i  _tensor_contraction_cuda.h.i  _tensor_forced_eval.h.i  _tensor_int_div.h.i  _tensor_morphing.h.i  _tensor_reduction_cuda.h.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/unsupported/_eigen/src/_euler_angles/: _euler_angles.h.i
thermr/dependencies/eigen-adapter/src/.hg/store/data/unsupported/test/: _euler_angles.cpp.i  cxx11__tensor__cast__float16__cuda.cu.i  cxx11__tensor__complex__cuda.cu.i  cxx11__tensor__of__float16__cuda.cu.i  cxx11__tensor__random__cuda.cu.i
thermr/dependencies/eigen-adapter/src/unsupported/test/: CMakeLists.txt
thermr/src/calcem/calcem_util/e_ep_mu_util/test/: 310.test.cpp  313.test.cpp  360.test.cpp  380.test.cpp  410.test.cpp  CMakeLists.txt
thermr/src/calcem/calcem_util/sigu_util/test/: CMakeLists.txt  begin_sigu.test.cpp  do150.test.cpp
thermr/src/calcem/calcem_util/test/: CMakeLists.txt  e_ep_mu.test.cpp  sig.test.cpp  sigl.test.cpp  sigu.test.cpp
thermr/src/coh/coh_util/sigcoh_util/test/: CMakeLists.txt  form.test.cpp  legndr.test.cpp  terp.test.cpp
thermr/src/coh/test/: CMakeLists.txt  coh.test.cpp
thermr/src/temp_eff/temp_eff_util/test/: CMakeLists.txt  gatef2.test.cpp  gateff.test.cpp
trans/: trans.h  trans.test.cpp
(+437 files in other folders)
